# sendanywhere-desktop

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd
SDK/: CMakeLists.txt
example/: sample_send.c
src/: sample_receive.c  sample_send.c
